--- a/css/default.css
+++ b/css/default.css
@@ -14,3 +14,13 @@ body{
   float: left;
   margin-right: 30px;
 }
+
+.explanation{
+  float: left;
+}
+
+dt{
+  clear: left;
+  float: left;
+  font-weight: bold;
+}
