--- a/css/default.css
+++ b/css/default.css
@@ -15,6 +15,12 @@ body{
   margin-right: 30px;
 }
 
+.m_picture:after{
+  content: "";
+  clear: both;
+  display: block;
+}
+
 .explanation{
   float: left;
 }
