--- a/css/default.css
+++ b/css/default.css
@@ -50,6 +50,18 @@ dt{
   border-collapse: collapse;
 }
 
-th, td{
+th{
   border: 1px solid lightcoral;
+  background-color: mistyrose;
+  padding: 5px;
+  width: 100px;
+  text-align: center;
+}
+
+td{
+  border: 1px solid lightcoral;
+  padding: 5px;
+  width: 80px;
+  text-align: right;
+}
 }
