--- a/css/default.css
+++ b/css/default.css
@@ -34,7 +34,13 @@ dt{
 
 .btn{
   -webkit-appearance: none;
+  -webkit-border-radius: 0;
   margin: 5px;
+  width: 100px;
+  height: 40px;
+  padding: 10px;
+  border: none;
+  font-size: 16px;
 }
 
 .btn-sumbit{
